Fix a use of an uninitialised variable in the bfd linker.

PR 27050
	* lexsup.c (parse_args): Ensure that the longind local variable is
	set.